--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&#39;);
 
 :root {
-    --cor-principal: #0076fd;
+    --cor-principal: #fd00be;
     --cor-secundaria: #5faaff;
     --cor-destaque: #aa00e2;
 }
